readelf, elflint: Handle PT_GNU_PROPERTY.

binutils 2.32 ld emits a new PT_GNU_PROPERTY segment that overlaps
with the PT_NOTE segment covering the .note.gnu.property section data.

https://sourceware.org/bugzilla/show_bug.cgi?id=25511

Signed-off-by: Mark Wielaard <mark@klomp.org>